add more contents

--- a/QuantumMechanics/operators.ipynb
+++ b/QuantumMechanics/operators.ipynb
@@ -10,12 +10,66 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe4c38d5",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a903ae3",
+   "metadata": {},
+   "source": [
+    "## Position Operator\n",
+    "\n",
+    "\n",
+    "$$ \\large \\hat{x} \\ = \\ x $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7143bb32",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc027b1",
+   "metadata": {},
+   "source": [
+    "## Momentum Operator\n",
+    "\n",
+    "\n",
+    "$$ \\large \\hat{p} \\ = \\ - i \\hbar \\nabla \\ = \\ - i \\hbar \\frac{\\partial}{\\partial x} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f0ad6cf",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d64304c",
    "metadata": {},
    "source": [
     "## Kinetic Energy Operator\n",
     "\n",
-    "$$ \\large \\hat{T} = \\frac{\\hat{p}^2}{2m} $$"
+    "$$ \\large \\hat{T} \\ = \\ \\frac{\\hat{p}^2}{2m} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba8a8a19",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -30,7 +84,14 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dfe0e0dd",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "abbd4c48",
    "metadata": {},
@@ -60,6 +121,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "420257e9",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6312a177",
    "metadata": {},
    "source": [
@@ -80,6 +149,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc9bb1f9",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f504b6d3",
    "metadata": {},
    "source": [
@@ -94,6 +171,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1bd6e0f",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9607674e",
    "metadata": {},
    "source": [
@@ -104,6 +189,14 @@
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR0177 Problem 043"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03dbaf7d",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -136,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
