--- a/QuantumMechanics/schrodinger_equation.ipynb
+++ b/QuantumMechanics/schrodinger_equation.ipynb
@@ -10,15 +10,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "326e5145",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76c1377e",
    "metadata": {},
    "source": [
-    "$$ \\large i\\hbar {\\frac {\\partial }{\\partial t}}\\Psi (x,t)=\\left[-{\\frac {\\hbar ^{2}}{2m}}{\\frac {\\partial ^{2}}{\\partial x^{2}}}+V(x,t)\\right]\\Psi (x,t) $$\n",
+    "## Time-dependent Schrödinger Equation\n",
+    "\n",
+    "\n",
+    "$$ \\large i\\hbar {\\frac {\\partial }{\\partial t}}\\Psi \\ = \\ \\left[-{\\frac {\\hbar ^{2}}{2m}}\\nabla^2+V \\right]\\Psi $$\n",
+    "\n",
+    "$$ \\large \\\\ $$\n",
+    "\n",
+    "$$ \\large i\\hbar {\\frac {d}{dt}}|\\Psi (t)\\rangle \\ = \\ \\left({\\frac {1}{2m}}{\\hat {p}}^{2}+{\\hat {V}}\\right)|\\Psi (t)\\rangle  $$\n",
+    "\n",
+    "$$ \\large \\\\ $$\n",
+    "\n",
+    "$$ \\large i\\hbar {\\frac {d}{dt}}\\vert \\Psi (t)\\rangle \\ = \\ {\\hat {H}}\\vert \\Psi (t)\\rangle $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### In 1-D\n",
+    "\n",
+    "$$ \\large i\\hbar {\\frac {\\partial }{\\partial t}}\\Psi (x,t) \\ = \\ \\left[-{\\frac {\\hbar ^{2}}{2m}}{\\frac {\\partial ^{2}}{\\partial x^{2}}}+V(x,t)\\right]\\Psi (x,t) $$\n",
+    "\n",
     "\n",
     "where\n",
     "\n",
-    "- $\\Psi(x,t)$: wave function\n",
-    "- "
+    "\n",
+    "- $\\Psi(x,t)$: time-dependent wave function\n",
+    "\n",
+    "\n",
+    "- $V$: potential\n",
+    "\n",
+    "\n",
+    "- $\\hbar$: reduced Planck constant"
    ]
   },
   {
@@ -26,8 +58,86 @@
    "id": "c6506394",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37a07f8c",
+   "metadata": {},
+   "source": [
+    "## Time-independent Schrödinger Equation\n",
     "\n",
-    "\n"
+    "$$ \\large E \\psi \\ = \\ \\left[-{\\frac {\\hbar ^{2}}{2m}}\\nabla^2+V\\right]\\psi $$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\\\ $$\n",
+    "\n",
+    "\n",
+    "$$ \\large {\\hat {H}} |\\Psi \\rangle \\ = \\ E|\\Psi \\rangle $$\n",
+    "\n",
+    "\n",
+    "## In 1-D\n",
+    "\n",
+    "$$ \\large E \\psi (x) \\ = \\ \\left[-{\\frac {\\hbar ^{2}}{2m}}{\\frac {\\partial ^{2}}{\\partial x^{2}}}+V(x)\\right]\\psi (x) $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $\\psi(x)$: time-independent wave function\n",
+    "\n",
+    "\n",
+    "- $V$: potential\n",
+    "\n",
+    "\n",
+    "- $\\hbar$: reduced Planck constant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc8ddee4",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9582f5b7",
+   "metadata": {},
+   "source": [
+    "## Wave function\n",
+    "\n",
+    "The wave function $\\Psi$ can be factored into a spartial and time component\n",
+    "\n",
+    "\n",
+    "$$ \\large \\Psi (\\vec{x},t) \\ = \\ \\psi(\\vec{x}) \\ \\varphi(t) $$\n",
+    "\n",
+    "\n",
+    "### For a stationary state\n",
+    "\n",
+    "\n",
+    "$$ \\large \\varphi(t) = e^{-i Et/\\hbar} $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3195a9ed",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3ecd857",
+   "metadata": {},
+   "source": [
+    "## Probability Distribution\n",
+    "\n",
+    "\n",
+    "$$ \\large \\int | \\Psi(\\vec{x},t) |^2 d^3 x = 1 $$"
    ]
   }
  ],
@@ -47,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
