--- a/StatisticalMechanics/maxwells_relations.ipynb
+++ b/StatisticalMechanics/maxwells_relations.ipynb
@@ -24,7 +24,16 @@
     "## Maxwell's Relations\n",
     "\n",
     "\n",
-    "$$ \\large $$"
+    "$$ \\large \\left( \\frac{\\partial V}{\\partial S} \\right)_P = \\left( \\frac{\\partial T}{\\partial P}\\right)_S $$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\left( \\frac{\\partial S}{\\partial V} \\right)_T = \\left( \\frac{\\partial P}{\\partial T}\\right)_V $$\n",
+    "\n",
+    "\n",
+    "$$ \\large - \\left( \\frac{\\partial S}{\\partial P} \\right)_T = \\left( \\frac{\\partial V}{\\partial T}\\right)_P $$\n",
+    "\n",
+    "\n",
+    "$$ \\large - \\left( \\frac{\\partial T}{\\partial V} \\right)_S = \\left( \\frac{\\partial P}{\\partial S}\\right)_V $$"
    ]
   }
  ],
@@ -44,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
