--- a/QuantumMechanics/expectation_value.ipynb
+++ b/QuantumMechanics/expectation_value.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "03a0ea5f",
+   "id": "b1cf1b2a",
    "metadata": {},
    "source": [
-    "# Expectation Value"
+    "# [Expectation Value](https://study-astrophysics.com/expectation-value/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8d74cda7",
+   "id": "22999a6a",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc762d3",
+   "id": "fba6d8ca",
    "metadata": {},
    "source": [
     "## Probability Distribution\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c5d3a9b",
+   "id": "f0f2087e",
    "metadata": {},
    "source": [
     "---"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99ed14a2",
+   "id": "e939d96e",
    "metadata": {},
    "source": [
     "## Expectation Value of $\\vec{x}$\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f766a66b",
+   "id": "6f650bf6",
    "metadata": {},
    "source": [
     "---"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0248046c",
+   "id": "24d881b0",
    "metadata": {},
    "source": [
     "## Expectation Value of $\\vec{p}$\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54e208c",
+   "id": "559279c7",
    "metadata": {},
    "source": [
     "---"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bade26d",
+   "id": "d7cbb1f5",
    "metadata": {},
    "source": [
     "## Expectation Value of a General Operator $\\hat{Q}$\n",
