--- a/QuantumMechanics/schrodinger_equation.ipynb
+++ b/QuantumMechanics/schrodinger_equation.ipynb
@@ -5,12 +5,12 @@
    "id": "7205533c",
    "metadata": {},
    "source": [
-    "# Schrödinger Equation"
+    "# [Schrödinger Equation](https://study-astrophysics.com/schrodinger-equation/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "326e5145",
+   "id": "c00ad877",
    "metadata": {},
    "source": [
     "---"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37a07f8c",
+   "id": "c432988a",
    "metadata": {},
    "source": [
     "## Time-independent Schrödinger Equation\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc8ddee4",
+   "id": "70fca249",
    "metadata": {},
    "source": [
     "---"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9582f5b7",
+   "id": "0cc20424",
    "metadata": {},
    "source": [
     "## Wave function\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3195a9ed",
+   "id": "9bee82e1",
    "metadata": {},
    "source": [
     "---"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3ecd857",
+   "id": "e4bba82b",
    "metadata": {},
    "source": [
     "## Probability Distribution\n",
