--- a/QuantumMechanics/time_independent_schrodinger_equation.ipynb
+++ b/QuantumMechanics/time_independent_schrodinger_equation.ipynb
@@ -5,57 +5,12 @@
    "id": "7205533c",
    "metadata": {},
    "source": [
-    "# [Schrödinger Equation](https://study-astrophysics.com/schrodinger-equation/)"
+    "# [Time Independent Schrödinger Equation](https://study-astrophysics.com/schrodinger-equation/)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "c00ad877",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76c1377e",
-   "metadata": {},
-   "source": [
-    "## Time-dependent Schrödinger Equation\n",
-    "\n",
-    "\n",
-    "$$ \\large i\\hbar {\\frac {\\partial }{\\partial t}}\\Psi \\ = \\ \\left[-{\\frac {\\hbar ^{2}}{2m}}\\nabla^2+V \\right]\\Psi $$\n",
-    "\n",
-    "$$ \\large \\\\ $$\n",
-    "\n",
-    "$$ \\large i\\hbar {\\frac {d}{dt}}|\\Psi (t)\\rangle \\ = \\ \\left({\\frac {1}{2m}}{\\hat {p}}^{2}+{\\hat {V}}\\right)|\\Psi (t)\\rangle  $$\n",
-    "\n",
-    "$$ \\large \\\\ $$\n",
-    "\n",
-    "$$ \\large i\\hbar {\\frac {d}{dt}}\\vert \\Psi (t)\\rangle \\ = \\ {\\hat {H}}\\vert \\Psi (t)\\rangle $$\n",
-    "\n",
-    "\n",
-    "\n",
-    "### In 1-D\n",
-    "\n",
-    "$$ \\large i\\hbar {\\frac {\\partial }{\\partial t}}\\Psi (x,t) \\ = \\ \\left[-{\\frac {\\hbar ^{2}}{2m}}{\\frac {\\partial ^{2}}{\\partial x^{2}}}+V(x,t)\\right]\\Psi (x,t) $$\n",
-    "\n",
-    "\n",
-    "where\n",
-    "\n",
-    "\n",
-    "- $\\Psi(x,t)$: time-dependent wave function\n",
-    "\n",
-    "\n",
-    "- $V$: potential\n",
-    "\n",
-    "\n",
-    "- $\\hbar$: reduced Planck constant"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6506394",
    "metadata": {},
    "source": [
     "---"
@@ -157,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
