add, split contents

--- a/QuantumMechanics/matter_wave.ipynb
+++ b/QuantumMechanics/matter_wave.ipynb
@@ -5,7 +5,15 @@
    "id": "5ebc545b",
    "metadata": {},
    "source": [
-    "# Matter Wave"
+    "# [Matter Wave](https://study-astrophysics.com/matter-wave/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "798e3cf3",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,12 +21,12 @@
    "id": "da996572",
    "metadata": {},
    "source": [
-    "## de Brolie Wavelength\n",
+    "## de Broglie Wavelength\n",
     "\n",
     "$$ \\large \\begin{split}\n",
-    "\\lambda & = \\frac{h}{p} \\\\\n",
-    "& = \\frac{h}{\\sqrt{2mE}} \\quad ( \\text{when } E = \\frac{p^2}{2m} ) \\\\\n",
-    "& = \\frac{h}{\\sqrt{2m(E-V)}} \\quad ( \\text{when } E = \\frac{p^2}{2m} + V )\n",
+    "\\lambda & \\ = \\frac{h}{p} \\ = \\ \\frac{2\\pi\\hbar}{p} \\\\\n",
+    "& \\ = \\frac{h}{\\sqrt{2mE}} \\quad ( \\text{when } E = \\frac{p^2}{2m} ) \\\\\n",
+    "& \\ = \\frac{h}{\\sqrt{2m(E-V)}} \\quad ( \\text{when } E = \\frac{p^2}{2m} + V )\n",
     "\\end{split}\n",
     "$$\n",
     "\n",
