--- a/QuantumMechanics/time_independent_schrodinger_equation.ipynb
+++ b/QuantumMechanics/time_independent_schrodinger_equation.ipynb
@@ -5,7 +5,7 @@
    "id": "7205533c",
    "metadata": {},
    "source": [
-    "# [Time Independent Schrödinger Equation](https://study-astrophysics.com/schrodinger-equation/)"
+    "# [Time Independent Schrödinger Equation](https://study-astrophysics.com/time-independent-schrodinger-equation/)"
    ]
   },
   {
@@ -59,40 +59,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cc20424",
-   "metadata": {},
-   "source": [
-    "## Wave function\n",
-    "\n",
-    "The wave function $\\Psi$ can be factored into a spartial and time component\n",
-    "\n",
-    "\n",
-    "$$ \\large \\Psi (\\vec{x},t) \\ = \\ \\psi(\\vec{x}) \\ \\varphi(t) $$\n",
-    "\n",
-    "\n",
-    "### For a stationary state\n",
-    "\n",
-    "\n",
-    "$$ \\large \\varphi(t) = e^{-i Et/\\hbar} $$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9bee82e1",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e4bba82b",
    "metadata": {},
    "source": [
-    "## Probability Distribution\n",
+    "## General Solution\n",
     "\n",
     "\n",
-    "$$ \\large \\int | \\Psi(\\vec{x},t) |^2 d^3 x = 1 $$"
+    "$$ \\large \\Psi(x,t) \\ = \\ \\sum^\\infty_{n=1} c_n \\psi_n(x) e^{-i E_nt/\\hbar}  $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $c_n = \\langle \\psi_n | \\Psi \\rangle$: complex constant $\\sum^\\infty_{n=1} |c_n|^2 = 1 $"
    ]
   }
  ],
