--- a/QuantumMechanics/expectation_value.ipynb
+++ b/QuantumMechanics/expectation_value.ipynb
@@ -82,6 +82,22 @@
     "\n",
     "$$ \\large \\langle Q \\rangle \\ = \\ \\int d^3 x \\Psi^* \\hat{Q} \\Psi \\ = \\ \\langle \\Psi | \\hat{Q} | \\Psi \\rangle $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7e01230",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ff41ff5",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\frac{d}{dt} \\langle Q \\rangle \\ = \\ \\frac{i}{\\hbar} \\langle [\\hat{H},\\hat{Q}] \\rangle + \\langle \\frac{\\partial \\hat{Q}}{\\partial t} \\rangle $$"
+   ]
   }
  ],
  "metadata": {
