--- a/QuantumMechanics/operators.ipynb
+++ b/QuantumMechanics/operators.ipynb
@@ -24,7 +24,7 @@
     "## Position Operator\n",
     "\n",
     "\n",
-    "$$ \\large \\hat{x} \\ = \\ x $$"
+    "$$ \\large \\hat{x} \\ = \\  x \\ = \\ i \\hbar \\frac{\\partial}{\\partial p} $$"
    ]
   },
   {
@@ -44,6 +44,25 @@
     "\n",
     "\n",
     "$$ \\large \\hat{p} \\ = \\ - i \\hbar \\nabla \\ = \\ - i \\hbar \\frac{\\partial}{\\partial x} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c970d67c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bcabdd9",
+   "metadata": {},
+   "source": [
+    "## Momentum and Position Operator\n",
+    "\n",
+    "\n",
+    "$$ \\large [\\hat{x},\\hat{p}] \\ = \\ i\\hbar $$"
    ]
   },
   {
@@ -210,6 +229,50 @@
     "$$ \\large \\det (A-\\lambda I) = 0 $$\n",
     "\n",
     "- Eigenvalues of the Hamiltonian operators are always **real**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4feb3d6",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f94234b",
+   "metadata": {},
+   "source": [
+    "## Hermitian Operator\n",
+    "\n",
+    "$\\hat{Q}$ is Hermitian if\n",
+    "\n",
+    "\n",
+    "$$ \\large \\langle \\hat{Q} \\psi|\\psi \\rangle \\ = \\ \\langle \\psi| \\hat{Q} \\psi\\rangle $$\n",
+    "\n",
+    "\n",
+    "- Hermitian operators only have real eigen values.\n",
+    "    - Thus, observables are represented by Hermitian operators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5ac5a56",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c3d394e",
+   "metadata": {},
+   "source": [
+    "## Commutator\n",
+    "\n",
+    "\n",
+    "$$ \\large [\\hat{A},\\hat{B}] \\ = \\ \\hat{A}\\hat{B} - \\hat{B}\\hat{A} $$"
    ]
   }
  ],
