--- a/QuantumMechanics/time_independent_schrodinger_equation.ipynb
+++ b/QuantumMechanics/time_independent_schrodinger_equation.ipynb
@@ -68,10 +68,36 @@
     "$$ \\large \\Psi(x,t) \\ = \\ \\sum^\\infty_{n=1} c_n \\psi_n(x) e^{-i E_nt/\\hbar}  $$\n",
     "\n",
     "\n",
-    "where\n",
+    "where"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "453f3f0a",
+   "metadata": {},
+   "source": [
+    "### $c_n$: complex constant \n",
+    "\n",
+    "$$ \\large c_n \\ = \\ \\langle \\psi_n | \\Psi \\rangle $$\n",
     "\n",
     "\n",
-    "- $c_n = \\langle \\psi_n | \\Psi \\rangle$: complex constant $\\sum^\\infty_{n=1} |c_n|^2 = 1 $"
+    "$$ \\\\ $$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\sum^\\infty_{n=1} |c_n|^2 \\ = \\ 1 $$\n",
+    "\n",
+    "\n",
+    "$$ \\\\ $$\n",
+    "\n",
+    "\n",
+    "$$ \\large c_n \\ = \\ \\langle \\psi_n | \\Psi \\rangle $$\n",
+    "\n",
+    "\n",
+    "$$ \\\\ $$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\sum^\\infty_{n=1} E_n |c_n|^2 \\ = \\ \\langle \\hat{H} \\rangle \\ = \\ \\langle E \\rangle $$\n",
+    "\n"
    ]
   }
  ],
@@ -91,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
