--- a/QuantumMechanics/wave_function.ipynb
+++ b/QuantumMechanics/wave_function.ipynb
@@ -5,7 +5,7 @@
    "id": "f9162c38",
    "metadata": {},
    "source": [
-    "# Wave Function"
+    "# [Wave Function](https://study-astrophysics.com/wave-function/)"
    ]
   },
   {
@@ -53,6 +53,31 @@
     "\n",
     "$$ \\large \\int | \\Psi(\\vec{x},t) |^2 d^3 x = 1 $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f97b331",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f06bd11",
+   "metadata": {},
+   "source": [
+    "## Momentum Space Wave Function \n",
+    "\n",
+    "\n",
+    "$$ \\large \\Phi (p,t) \\ = \\ \\frac{1}{\\sqrt{2\\pi\\hbar}} \\int e^{-ipx/\\hbar} \\Psi(x,t) dx $$\n",
+    "\n",
+    "\n",
+    "$$ \\\\ $$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\Psi (x,t) \\ = \\ \\frac{1}{\\sqrt{2\\pi\\hbar}} \\int e^{-ipx/\\hbar} \\Phi(p,t) dp $$"
+   ]
   }
  ],
  "metadata": {
@@ -71,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
