--- a/QuantumMechanics/uncertainty_principle.ipynb
+++ b/QuantumMechanics/uncertainty_principle.ipynb
@@ -5,7 +5,7 @@
    "id": "dfa1cb20",
    "metadata": {},
    "source": [
-    "# Uncertainty Principle"
+    "# [Uncertainty Principle](https://study-astrophysics.com/uncertainty-principle/)"
    ]
   },
   {
@@ -32,6 +32,25 @@
     "\n",
     "$$ \\large \\Delta E \\ \\Delta t \\ge \\frac{\\hbar}{2} $$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89610a84",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ae07e1",
+   "metadata": {},
+   "source": [
+    "## Generalized Uncertainty Principle\n",
+    "\n",
+    "\n",
+    "$$ \\large \\sigma^2_A \\sigma^2_B \\ge \\left( \\frac{1}{2i} \\langle [\\hat{A},\\hat{B}] \\rangle \\right)^2 $$"
+   ]
   }
  ],
  "metadata": {
@@ -50,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
