add link and more explanations

--- a/QuantumMechanics/1d_infinite_square_well.ipynb
+++ b/QuantumMechanics/1d_infinite_square_well.ipynb
@@ -5,7 +5,61 @@
    "id": "6c9f98c0",
    "metadata": {},
    "source": [
-    "# One-dimensional Infinite Square Well"
+    "# [One-dimensional Infinite Square Well](https://study-astrophysics.com/1d-infinite-square-well/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7263ce66",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09967b21",
+   "metadata": {},
+   "source": [
+    "## Potential Energy\n",
+    "\n",
+    "\n",
+    "$$ \\large \\begin{split}\n",
+    "V(x) & \\ = \\ 0 \\quad\\quad (0 \\le x \\le L) \\\\\n",
+    "\\\\\n",
+    "& \\ = \\ \\infty \\quad\\quad (\\text{otherwise}) \\end{split} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "232fc75f",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66c6991a",
+   "metadata": {},
+   "source": [
+    "## Time-Independent Schrodinger Equation\n",
+    "\n",
+    "$$ \\large \\frac{d^2 \\psi}{dx^2} \\ = \\ -k^2 \\psi$$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $k = \\sqrt{2mE}/\\hbar$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef1869e7",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -20,7 +74,16 @@
     "\n",
     "\n",
     "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [013](https://study-astrophysics.com/gr1777-013/)\n",
     "- GRE Physics GR0177 Problem 044"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e80fa8c",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -35,19 +98,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae2148fe",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f70835ea",
    "metadata": {},
    "source": [
     "## Normalization\n",
     "\n",
-    "$$ \\begin{split}\n",
-    "\\int^L_0 \\psi^* \\psi dx & = \\large \\int^L_0 A^2 \\sin^2 \\left( \\frac{n \\pi}{L} x \\right) dx \\quad & = \\ 1 \\\\\n",
-    " & = A^2 \\left[ \\frac{x}{2} - \\frac{\\sin \\left( \\frac{2 n \\pi}{L} x\\right)}{4 \\pi n/L} \\right] & = \\frac{A^2}{2}L\n",
+    "$$ \\large  \\begin{split}\n",
+    "\\int^L_0 \\psi^* \\psi dx & \\ = \\  \\large \\int^L_0 A^2 \\sin^2 \\left( \\frac{n \\pi}{L} x \\right) dx \\quad & \\ = \\ 1 \\\\\n",
+    "\\\\\n",
+    " & \\ = \\ A^2 \\left[ \\frac{x}{2} - \\frac{\\sin \\left( \\frac{2 n \\pi}{L} x\\right)}{4 \\pi n/L} \\right] & \\ = \\ \\frac{A^2}{2}L\n",
     "\\end{split} $$\n",
     "\n",
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR0877 Problem 085"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "497e83f4",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "304da3ab",
+   "metadata": {},
+   "source": [
+    "## Orthogonal Condition\n",
+    "\n",
+    "$$ \\large \\int^L_0 \\psi^*_m \\psi_n dx \\ = \\ \\delta_{mn} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2999a166",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f321dcb",
+   "metadata": {},
+   "source": [
+    "## $c_n$\n",
+    "\n",
+    "\n",
+    "$$ \\large c_n = \\sqrt{\\frac{2}{L}} \\int^L_0 \\sin \\left( \\frac{n \\pi}{L}x \\right) \\Psi (x,0) dx $$"
    ]
   }
  ],
