--- a/QuantumMechanics/qm_harmonic_oscillator.ipynb
+++ b/QuantumMechanics/qm_harmonic_oscillator.ipynb
@@ -5,7 +5,7 @@
    "id": "b2e7f6a5",
    "metadata": {},
    "source": [
-    "# Quantum Harmonic Oscillator"
+    "# [Quantum Harmonic Oscillator](https://study-astrophysics.com/quantum-harmonic-oscillator/)"
    ]
   },
   {
@@ -22,7 +22,6 @@
    "metadata": {},
    "source": [
     "## Potential Energy\n",
-    "\n",
     "\n",
     "$$ \\large V \\ = \\ \\frac{1}{2} kx^2 \\ = \\ \\frac{1}{2} k \\omega^2 x^2 $$\n",
     "\n",
