--- a/QuantumMechanics/3d_schrodinger_equation.ipynb
+++ b/QuantumMechanics/3d_schrodinger_equation.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8059ab54",
+   "id": "4bb29c03",
    "metadata": {},
    "source": [
-    "# 3-Dimensional Schrödinger Equation"
+    "# [3-Dimensional Schrödinger Equation](https://study-astrophysics.com/3d-schrodinger-equation/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "861b94e3",
+   "id": "ffa80a59",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb6cba80",
+   "id": "8fae40c6",
    "metadata": {},
    "source": [
     "## Separation of Variables\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa41e291",
+   "id": "be380926",
    "metadata": {},
    "source": [
     "---"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "556797bc",
+   "id": "eaf5bd02",
    "metadata": {},
    "source": [
     "## 3-D Schrödinger Equation\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f231d4c",
+   "id": "4aa980b4",
    "metadata": {},
    "source": [
     "---"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3aa094c",
+   "id": "405653de",
    "metadata": {},
    "source": [
     "## Solutions\n",
