--- a/QuantumMechanics/operators.ipynb
+++ b/QuantumMechanics/operators.ipynb
@@ -151,15 +151,21 @@
    "id": "6312a177",
    "metadata": {},
    "source": [
-    "## Angular Momentum Operator\n",
+    "## [Angular Momentum Operator](https://study-astrophysics.com/angular-momentum-operator/)\n",
     "\n",
-    "$$ \\large [J_x, J_y] = i \\hbar J_z $$\n",
+    "$$ \\large [\\hat{L}_x, \\hat{L}_y] \\ = \\ i \\hbar \\hat{L}_z $$\n",
     "\n",
-    "$$ \\large [J_y, J_z] = i \\hbar J_x $$\n",
     "\n",
-    "$$ \\large [J_z, J_x] = i \\hbar J_y $$\n",
+    "$$ \\large [\\hat{L}_y, \\hat{L}_z] \\ = \\ i \\hbar \\hat{L}_x $$\n",
+    "\n",
+    "\n",
+    "$$ \\large [\\hat{L}_z, \\hat{L}_x] \\ = \\ i \\hbar \\hat{L}_y $$\n",
+    "\n",
     "\n",
     "Cyclic order\n",
+    "\n",
+    "\n",
+    "$$ \\large [\\hat{L}_i, \\hat{L}_j] \\ = \\ i \\hbar \\epsilon_{ijk} \\hat{L}_k$$\n",
     "\n",
     "\n",
     "## Related Problems\n",
@@ -274,6 +280,25 @@
     "\n",
     "$$ \\large [\\hat{A},\\hat{B}] \\ = \\ \\hat{A}\\hat{B} - \\hat{B}\\hat{A} $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f31a1adf",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "190fe2fb",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Angular Momentum Operator](https://study-astrophysics.com/angular-momentum-operator/)"
+   ]
   }
  ],
  "metadata": {
@@ -292,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
