--- a/QuantumMechanics/eigenspinor.ipynb
+++ b/QuantumMechanics/eigenspinor.ipynb
@@ -5,7 +5,7 @@
    "id": "86123470",
    "metadata": {},
    "source": [
-    "# Eigenspinor"
+    "# [Eigenspinor](https://study-astrophysics.com/eigenspinor/)"
    ]
   },
   {
