--- a/QuantumMechanics/spin.ipynb
+++ b/QuantumMechanics/spin.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6c870a6c",
+   "id": "4378c890",
    "metadata": {},
    "source": [
-    "# Spin"
+    "# [Spin](https://study-astrophysics.com/spin/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e6c0b94d",
+   "id": "aaf03708",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d32b0f7",
+   "id": "8466de9f",
    "metadata": {},
    "source": [
     "## Spin Examples\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf6fb3a",
+   "id": "ed271c1c",
    "metadata": {},
    "source": [
     "---"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d1085db",
+   "id": "29b7817c",
    "metadata": {},
    "source": [
     "## Fermion\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1990025",
+   "id": "6b55b8cb",
    "metadata": {},
    "source": [
     "---"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a96588",
+   "id": "6089d1c8",
    "metadata": {},
    "source": [
     "## Boson\n",
