--- a/QuantumMechanics/spin_operator.ipynb
+++ b/QuantumMechanics/spin_operator.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a8ab3fe4",
+   "id": "5ec71514",
    "metadata": {},
    "source": [
-    "# Spin Operator"
+    "# [Spin Operator](https://study-astrophysics.com/spin-operator/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a494247e",
+   "id": "8f47a49c",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7529dbc8",
+   "id": "94f06eb1",
    "metadata": {},
    "source": [
     "## Commutative Property\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558a0372",
+   "id": "b37c3dcc",
    "metadata": {},
    "source": [
     "---"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8863792",
+   "id": "c30a0ae0",
    "metadata": {},
    "source": [
     "## Eigenvalues\n",
