add some contents

--- a/QuantumMechanics/eigenspinor.ipynb
+++ b/QuantumMechanics/eigenspinor.ipynb
@@ -58,17 +58,18 @@
     "$$\n",
     "\n",
     "\n",
-    "### Eigenvalue\n",
-    "\n"
+    "### Eigenvalue of $\\hat{S}^2 \\chi_\\pm$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\hat{S}^2 \\chi_\\pm \\ = \\ \\frac{3}{4} \\hbar^2 \\chi_\\pm $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Eigenvalue of $\\hat{S}_z \\chi_\\pm$\n",
+    "\n",
+    "\n",
+    "$$ \\large \\hat{S}^2 \\chi_\\pm \\ = \\ \\pm \\frac{\\hbar}{2} \\chi_\\pm $$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b1e1253",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
