--- a/QuantumMechanics/spin_operator.ipynb
+++ b/QuantumMechanics/spin_operator.ipynb
@@ -44,16 +44,15 @@
    "id": "c30a0ae0",
    "metadata": {},
    "source": [
-    "## Eigenvalues\n",
-    "\n",
-    "\n",
-    "### of $\\hat{S}^2$\n",
+    "## Eigenvalues of $\\hat{S}^2$\n",
     "\n",
     "\n",
     "$$ \\large \\hat{S}^2 | sm \\rangle \\ = \\ s(s+1) \\hbar^2 | sm \\rangle $$\n",
     "\n",
     "\n",
-    "### of $\\hat{S}_z$\n",
+    "\n",
+    "\n",
+    "## Eigenvalues of $\\hat{S}_z$\n",
     "\n",
     "\n",
     "$$ \\large \\hat{S}_z | sm \\rangle \\ = \\ m \\hbar | sm \\rangle $$\n",
